proc.c: call respond_to_missing? with a symbol

[ruby-core:91683] [Bug #15640]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@67185 b2dd03c8-39d4-4d8f-98ff-823fe69b080e